--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,4 +1,35 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
+<!-- Footer Section Begin -->
+<footer class="footer">
+  <div class="page-up">
+    <a href="#" id="scrollToTopButton"><i class="fa-solid fa-arrow-up"></i></a>
   </div>
-</nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3">
+        <div class="footer__logo">
+          <a href="/"><img
+              src="https://res.cloudinary.com/dca4pmvud/image/upload/v1687773641/logo_jwcfid.png"
+              alt=""
+            /></a>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="footer__nav">
+          <ul>
+            <li class="active"><a href="./index.html">Homepage</a></li>
+            <li><a href="./categories.html">Categories</a></li>
+            <li><a href="./blog.html">Our Blog</a></li>
+            <li><a href="#">Contacts</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <p>
+          Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+          All rights reserved
+        </p>
+      </div>
+    </div>
+  </div>
+</footer>
+<!-- Footer Section End -->
