--- a/src/resources/views/game/edit.hbs
+++ b/src/resources/views/game/edit.hbs
@@ -2,8 +2,18 @@
     <h3>Edit Game</h3>
     <form class="mt-4" method="POST" action="/games/{{game._id}}?_method=PUT">
         <div class="form-group">
-            <label for="name">Tên</label>
+            <label for="name">Tên Game</label>
             <input type="text" class="form-control" value="{{game.name}}" id="name" name = "name">
+        </div>
+        <div class="form-group">
+            <label for="Publisher">Nhà phát hành</label>
+            <input type="text" class="form-control" value="{{game.Publisher}}" id="Publisher" name = "Publisher">
+        </div>
+        <div class="form-group">
+            <div class="r_date">
+                <label for="Release_date">Ngày phát hành</label>
+                <input type="date" class="form-control" value="{{game.Release_date}}" id="Release_date" name = "Release_date">
+            </div>
         </div>
         <div class="form-group">
             <label for="Type">Thể Loại:</label>      
@@ -32,31 +42,39 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="Capacity">Dung lượng</label>
-            <input type="text" class="form-control" value="{{game.Capacity}}" id="Capacity" name = "Capacity">
+             <div class="cap">
+                <label for="Capacity">Dung lượng</label>
+                <input type="text" class="form-control" value="{{game.Capacity}}" id="Capacity" name = "Capacity">
+             </div>
+            <div class="cap">
+                <label for="Configuration">Cấu hình</label>
+                <input type="text" class="form-control" value="{{game.Configuration}}" id="Configuration" name = "Configuration">
+            </div>
+            <div class="cap">
+                <label for="Development">Dòng game:</label>
+                <label>{{game.Development}}</label>
+                <select id="Development"  name = "Development">      
+                    <option>Indie</option>
+                    <option>Bom Tấn (AAA) </option>
+                </select>
+             </div>
         </div>
         <div class="form-group">
-            <label for="Configuration">Cấu hình</label>
-            <input type="text" class="form-control" value="{{game.Configuration}}" id="Configuration" name = "Configuration">
+            <label for="Content">Nội dung</label>
+            <textarea class="form-control" id="Content" name = "Content">{{game.Content}}</textarea>
         </div>
-        
         <div class="form-group">
-            <label for="Development">Dòng game:</label>
-            <label>{{game.Development}}</label>
-            <select id="Development"  name = "Development">      
-                <option>Indie</option>
-                <option>Bom Tấn (AAA) </option>
-            </select>
+            <label for="price">Giá</label>
+            <input type="number" class="form-control" value="{{game.price}}" id="price" name = "price">
         </div>
-
         <div class="form-group">
             <label for="Filedl">Link Download</label>
             <input type="text" class="form-control" value="{{game.Filedl}}" id="Filedl" name = "Filedl">
         </div>  
 
         <div class="form-group">
-            <label for="image">Image</label>
-            <textarea class="form-control" id="image" name = "image">{{game.Image}}</textarea>
+            <label for="Image">Image</label>
+            <textarea class="form-control" id="Image" name = "Image">{{game.Image}}</textarea>
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
     </form>
